unpackaged/main/default/objects/CMPL123TMS__TMS_Quizzes__c/CMPL123TMS__TMS_Quizzes__c.object-meta.xml
<CustomObject>
    <label>TMS Quizzes</label>
    <nameField>
        <displayFormat>QN-{00000}</displayFormat>
        <label>Quiz Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMS Quizzes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>