unpackaged/main/default/objects/CMPL123TMS__TMS_Quizzes__c/fields/CMPL123TMS__Active_Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Active_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Please check this if you want record to be active.</inlineHelpText>
        <label>Active Status</label>
        <type>Checkbox</type>
    </CustomField>