unpackaged/main/default/objects/CMPL123TMS__TMS_Quizzes__c/fields/CMPL123TMS__Assign_Weights__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Assign_Weights__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Please check this if you want assign weights.</inlineHelpText>
        <label>Assign Weights</label>
        <type>Checkbox</type>
    </CustomField>