unpackaged/main/default/objects/CMPL123TMS__TMS_Quizzes__c/fields/CMPL123TMS__Category__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Category__c</fullName>
        <description>Category of Quiz.</description>
        <inlineHelpText>Please provide the category of Quiz.</inlineHelpText>
        <label>Category</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>