unpackaged/main/default/objects/CMPL123TMS__TMS_Quizzes__c/fields/CMPL123TMS__Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Description__c</fullName>
        <description>Description of Quiz.</description>
        <inlineHelpText>Please provide description.</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>