unpackaged/main/default/objects/CMPL123TMS__TMS_Quizzes__c/fields/CMPL123TMS__Passing_Percentage__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Passing_Percentage__c</fullName>
        <inlineHelpText>Please provide passing percentage.</inlineHelpText>
        <label>Passing Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>