unpackaged/main/default/objects/CMPL123TMS__TMS_Quizzes__c/fields/CMPL123TMS__Randomize_Questions__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Randomize_Questions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please select this if you want to randomize questions.</inlineHelpText>
        <label>Randomize Questions</label>
        <type>Checkbox</type>
    </CustomField>