unpackaged/main/default/objects/CMPL123TMS__TMS_Quizzes__c/fields/CMPL123TMS__Show_Feedback__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Show_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this if you want to provide feedback.</inlineHelpText>
        <label>Show Feedback</label>
        <type>Checkbox</type>
    </CustomField>