unpackaged/main/default/objects/CMPL123TMS__TMS_Quizzes__c/fields/CMPL123TMS__Title__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Title__c</fullName>
        <description>Title of Quiz.</description>
        <inlineHelpText>Please provide title.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>